RESOLVED FIXED186981
REGRESSION: hardware-accelerated animation fails on inline element
https://bugs.webkit.org/show_bug.cgi?id=186981
Summary REGRESSION: hardware-accelerated animation fails on inline element
mitz
Reported 2018-06-24 13:48:49 PDT
Created attachment 343469 [details] Test case When the Web Animations experimental feature is on (which is now the default in Safari Technology Preview), the keyframe animation in the attached HTML doesn’t run.
Attachments
Test case (538 bytes, text/html)
2018-06-24 13:48 PDT, mitz
no flags
Patch (12.27 KB, patch)
2018-06-25 05:53 PDT, Antoine Quint
dino: review+
mitz
Comment 1 2018-06-24 13:51:34 PDT
Disabling either one of “Web Animations” and “Web Animations and CSS Integration”, or both, makes the bug go away.
Radar WebKit Bug Importer
Comment 2 2018-06-25 02:16:25 PDT
Antoine Quint
Comment 3 2018-06-25 02:19:53 PDT
Changing the target element from a <span> to a <div> makes the animation work as expected. We exit early in KeyframeEffectReadOnly::applyPendingAcceleratedActions() because we fail to get a renderer.
Antoine Quint
Comment 4 2018-06-25 05:53:50 PDT
Antoine Quint
Comment 5 2018-06-25 12:24:51 PDT
Note You need to log in before you can comment on or make changes to this bug.