REGRESSION: hardware-accelerated animation fails on inline element https://bugs.webkit.org/show_bug.cgi?id=186981 <rdar://problem/41418697>

Reviewed by Dean Jackson.

Source/WebCore:

Ensure we only queue accelerated actions when we have a renderer so we don't attempt
to start an accelerated animation too soon.

Test: webanimations/opacity-animation-yields-compositing-span.html

* animation/KeyframeEffectReadOnly.cpp:
(WebCore::KeyframeEffectReadOnly::updateAcceleratedAnimationState):

LayoutTests:

* platform/mac/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-expected.txt:
* platform/mac-sierra/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-expected.txt:
* webanimations/opacity-animation-yields-compositing-expected.txt:
* webanimations/opacity-animation-yields-compositing-span-expected.txt:
* webanimations/opacity-animation-yields-compositing-span.html: Added.
* webanimations/opacity-animation-yields-compositing.html:

Canonical link: https://commits.webkit.org/202255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233164 268f45cc-cd09-0410-ab3c-d52691b4dbfc